# ssotk

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: FORMATS.md  PXSCRIPT.md
native/core/: CMakeLists.txt
native/core/include/ssotk/: nebula.hpp  text.hpp  vocab.hpp
native/core/src/: bindings.cpp  nebula.cpp  text.cpp  vocab.cpp
native/pxdump/: CMakeLists.txt  CMakePresets.json  README.md
native/pxdump/src/: dllmain.cpp
scripts/: star_stable_online.bms
ssotk/: cli.py  config.py  convert.py  fetch.py  identify.py  nebula.py  pxscript.py  text.py  unpack.py  vocab.py
ssotk/mine/: __init__.py  horses.py  icons.py  items.py  translations.py
tests/: test_cli.py  test_config.py  test_convert.py  test_fetch.py  test_identify.py  test_mine_horses.py  test_mine_items.py  test_nebula.py  test_nebula_typed.py  test_pxscript.py  test_text.py  test_unpack.py  test_vocab.py
tests/fixtures/: actor_scene.py  dreiren_scene.py  metaldetector_scene.py  nasset_widget.py
tools/: inject.py
