[project]
name = "ssotk"
version = "0.2.0"
description = "Star Stable Online: unpack, Nebula-format deserializer, translation decoder, PXScript renderer, and datamining pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["star-stable-online", "nebula", "reverse-engineering", "datamining", "pxscript"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Reverse Engineering",
  "Topic :: Games/Entertainment",
]
dependencies = ["Pillow>=10", "tqdm>=4.66"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
ssotk = "ssotk.cli:main"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.20"
minimum-version = "build-system.requires"
wheel.packages = ["ssotk"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
